# select-git-author

./: README.md  cli.py  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml  pylint.yml
git_select_author/: cli.py
select_git_author/: cli.py
