[tool.poetry]
name = "git-select-author"
version = "0.1.0"
description = ""
authors = ["Markus Grotz <markus.grotz@kit.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
questionary = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
commit = 'git_select_author.cli:cli'


