[tool.poetry]
name = "select-git-author"
version = "0.1.0"
description = ""
authors = ["Markus Grotz <markus.grotz@kit.edu>"]

[tool.poetry.dependencies]
python = "^3"
click = "^8"
questionary = "^1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
commit = 'select_git_author.cli:cli'
